# AdventOfCode2025

./: .gitignore  CMakeLists.txt  README.md
day01/: main.cpp
day02/: main.cpp
day03/: main.cpp
day04/: main.cpp
day05/: main.cpp
day06/: main.cpp
day07/: main.cpp
day08/: main.cpp
day09/: main.cpp
day10/: main.cpp
